tests/cases/compiler-development/artifact/errors/diagnostic-borrow-aggregate-enum-payload.ari
struct View {
  value: ref i64,
}

enum Event {
  Empty,
  Borrowed(View),
}

fn main() -> i64 {
  return 0;
}
